# jackett-async

./: Cargo.toml
benches/: benchmark.rs
src/: error.rs  lib.rs  model.rs
