[package]
name = "jackett-async"
version = "0.1.3"
authors = ["Mike Cronce <mike@quadra-tec.net>"]
edition = "2021"
license = "MIT"
repository = "https://gitlab.cronce.io/foss/jackett-async"
categories = ["api-bindings"]
keywords = ["torrent", "bittorrent"]
description = "An async client for Jackett"

[features]
parse-names = ["torrent-common/parse-names"]
require-parse-names = ["torrent-common/require-parse-names"]

[dependencies]
reqwest = {version = "0.11", default-features = false, features = ["gzip", "json", "rustls-tls"]}
serde = {version = "1", features = ["derive"]}
thiserror = "1"
torrent-common = "0.1.2"
tracing = "0.1"
urlencoding = "2"

[dev-dependencies]
criterion = "0.4.0"
serde_json = "1"
torrent-name-parser = "0.9"

[[bench]]
name = "benchmark"
harness = false

